registered connection string in json and removed it from app

--- a/BudgetApplication/appsettings.json
+++ b/BudgetApplication/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings" : {
-    "DefaultConnection" :  
-  } ,
+  "ConnectionStrings": {
+    "BudgetAppDatabase": "Server=(localdb)\\mssqllocaldb;Database=BudgetApp;Trusted_Connection=True;"
+  },
 
   "Logging": {
     "LogLevel": {
